fix CSS so new comment form aligns to right

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -37,7 +37,7 @@ footer {
   display: table;
 }
 
-.comments-form {
+.new-comment-form {
   margin: 20px;
   text-align: right;
 }
